--- a/browser.html
+++ b/browser.html
@@ -5,7 +5,7 @@
     <script src="lib/jquery-1.10.2.min.js" type="text/javascript"></script>
     <script src="lib/handlebars-v1.3.0.js" type="text/javascript"></script>
     <script src="lib/rdf_store.js" type="text/javascript"></script>
-    <script src="selector.js" type="text/javascript"></script>
+    <script src="matcher.js" type="text/javascript"></script>
     <script src="src/uduvudu.js" type="text/javascript"></script>
 </head>
 <body>
