--- a/browser.html
+++ b/browser.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <meta charset="UTF-8">
     <link href="lib/bootstrap.min.css" rel="stylesheet">
     <script src="lib/underscore-1.5.1.js" type="text/javascript"></script>
     <script src="lib/jquery-1.10.2.min.js" type="text/javascript"></script>
@@ -11,6 +12,9 @@
 <body>
     <div class="container">
         <div id="main">
+            <h1>Uduvudu Browser</h1>
+            <p>This is an example showing Uduvudu incorporated in a browser style application.</p>
+            <p>You can start browsing adding in the location bar the <code>uri</code> variable. As e.g. <a href="?uri=http://dbpedia.org/resource/Nature"><code>?uri=http://dbpedia.org/resource/Nature</code><a></p>
         </div>
     </div>
     <div id="visualizer">
@@ -34,7 +38,7 @@
                 store.load('remote',source, function(success, amountTriples){
                     if(success) {
                         console.debug("successfully loaded "+amountTriples+" triples");
-                        $("#main").html(Uduvudu().process(store, resource));
+                        $("#main").html(uduvudu.process(store, resource));
                     }; 
                 })
             } else {
@@ -43,7 +47,7 @@
                         if(success) {
                             console.debug("successfully loaded "+amountTriples+" triples");
                             var startTime = new Date(); 
-                            $("#main").html(Uduvudu().process(store, resource));
+                            $("#main").html(uduvudu.process(store, resource));
                             console.log("rendered in " + ((new Date()) - startTime) + "ms");
                         };
                     }) 
