--- a/visualizer_browser.html
+++ b/visualizer_browser.html
@@ -75,7 +75,7 @@ URI in comment refers to the class of the object in rdf:range
 <script id="location_js" type="text/x-handlebars-template">
         var script = document.createElement("script");
         script.type = "text/javascript";
-        script.src = "//maps.googleapis.com/maps/api/js?key=AIzaSyAFRTcPPyYit9ERj9COlgpgYW-Ve-lUeUs&sensor=false&callback=initializeMap";
+        script.src = "http://maps.googleapis.com/maps/api/js?key=AIzaSyAFRTcPPyYit9ERj9COlgpgYW-Ve-lUeUs&sensor=false&callback=initializeMap";
         document.body.appendChild(script);
         
         initializeMap = function () {
