--- a/visualizer.html
+++ b/visualizer.html
@@ -35,13 +35,6 @@ URI in comment refers to the class of the object in rdf:range
   </div>
 </script>
 
-
-<script id="citedBy" type="text/x-handlebars-template">
-   <p><b>Cited by:</b> 
-  {{#each citedBy}}{{#if @index}}, {{/if}}<a href="?uri={{this}}">{{this}}</a>{{/each}}
-  </p>
-</script>
-
 <script id="neighboringMunicipalities" type="text/x-handlebars-template">
   <div style="height: 200px; width: 200px; float: left; overflow: scroll;">
   <p><b>Neighboring Municipalities:</b><br /> 
@@ -52,7 +45,7 @@ URI in comment refers to the class of the object in rdf:range
 
 <script id="license" type="text/x-handlebars-template">
   <div style="height: 200px; width: 200px; float: left; overflow: scroll;">
-    <p><small>{{#if license.u}}&copy; {{license.u}}{{else}}&copy; <a href="{{uri.u}}">{{uri.u}}</a>{{/if}}</small></p>
+    <p><small>&copy; {{license.u}}</small></p>
   </div>
 </script>
 
@@ -113,7 +106,7 @@ URI in comment refers to the class of the object in rdf:range
 </script>
 
 <script id="literal" type="text/x-handlebars-template">
-    <div style="width: 200px; height: 200px; float: left"><p><b>{{{name.u}}}</b>:<br /> {{{text.u}}}</p></div>
+    <div style="width: 200px; height: 200px; float: left"><p title="{{{subject.u}}} - {{{predicate.u}}}"><b>{{{name.u}}}</b>:<br /> {{{text.u}}}</p></div>
 </script>
 
 <!-- void -->
