--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
     <div class="container">
         <div id="chooser">
             <form class="form-inline" role="form">
-                <input id="setRDF" type="text" class="form-control"></input>
-                <select id="selectRDF" class="form-control">
+                Source: (from where to load)<input id="setSource" type="text" class="form-control"></input>
+                Resource: (from which uri to start the parsing)<input id="setResource" type="text" class="form-control"></input>
+                <select id="selectSource" class="form-control">
                     <option>Select a sample RDF URI</option>
-                    <option data-res="http://dbpedia.org/resource/Brig-Glis">examples/Brig-Glis.ttl</option>
-                    <option data-res="http://data.admin.ch/bfs/municipality/13228">http://data.admin.ch/bfs/municipality/13228</option>
-                    <option data-res="http://dbpedia.org/resource/Brig-Glis">http://dbpedia.org/data/Brig-Glis.ttl</option>
                     <option data-res="http://dbpedia.org/resource/Bern_University_of_Applied_Sciences">examples/Bern_University_of_Applied_Sciences.ttl</option>
                     <option data-res="http://dbpedia.org/resource/Bern_University_of_Applied_Sciences">http://dbpedia.org/data/Bern_University_of_Applied_Sciences.ttl</option>
                     <option data-res="http://dbpedia.org/resource/Rolex">examples/Rolex.ttl</option>
                     <option data-res="http://dbpedia.org/resource/Rolex">http://dbpedia.org/data/Rolex.ttl</option>
+                    <option data-res="http://dbpedia.org/resource/Brig-Glis">examples/Brig-Glis.ttl</option>
+                    <option data-res="http://dbpedia.org/resource/Brig-Glis">http://dbpedia.org/resource/Brig-Glis.ttl</option>
                     <option data-res="http://dbpedia.org/resource/Bern">http://dbpedia.org/data/Bern.ttl</option>
+                    <option data-res="http://www.w3.org/People/Berners-Lee/card#i">examples/TimBernersLee.ttl</option>
+                    <option data-res="http://data.admin.ch/bfs/municipality/13228">http://data.admin.ch/bfs/municipality/13228</option>
                 </select>
             </form> 
         </div>
@@ -74,11 +76,15 @@
             loadFromSource(uri, uri);
             }
 
-        $('#setRDF').on('keyup', function() {
-            loadFromSource(this.value);
+        $('#setSource').on('keyup', function() {
+            loadFromSource(this.value, $('#setResource').val());
         });
 
-        $('#selectRDF').on('change', function(event) {
+        $('#setResource').on('keyup', function() {
+            loadFromSource($('#setSource').val(), this.value);
+        });
+
+        $('#selectSource').on('change', function(event) {
             loadFromSource(this.value, event.target.selectedOptions[0].attributes['data-res'].nodeValue);
             //loadFromSource(this.value);
         });
