--- a/visualizer_browser.html
+++ b/visualizer_browser.html
@@ -1,9 +1,7 @@
 <!--
-
-# BASE TYPE DEFINITIONS
-
-URI in comment refers to the class of the object in rdf:range 
+# Visualizer Tempaltes
 -->
+
 <script id="title" type="text/x-handlebars-template">
   <h1>{{title.u}}</h1>
 </script>
@@ -13,19 +11,39 @@ URI in comment refers to the class of the object in rdf:range
 </script>
 
 <script id="text" type="text/x-handlebars-template">
-  <div style="height: 200px; width: 400px; float: left; overflow: scroll;">
+  <div style="height: 235px; width: 470px; float: left; overflow: scroll;">
   <p>{{text.u}}</p>
   </div>
 </script>
 
 <script id="person_name" type="text/x-handlebars-template">
-  <div style="height: 200px; width: 200px; float: left; overflow: hidden;">
+  <div style="height: 235px; width: 235px; float: left; overflow: hidden;">
       {{lastName.u}} {{firstName.u}}
   </div>
 </script>
 
+<script id="address_line3" type="text/x-handlebars-template">
+  <div style="height: 235px; width: 235px; float: left; overflow: hidden;">
+      {{#each address}}
+          {{this.country.u}}-{{this.postalCode.u}} {{this.city.u}}
+      {{/each}}
+  </div>
+</script>
+
+<script id="address" type="text/x-handlebars-template">
+  <div style="height: 235px; width: 235px; float: left; overflow: hidden;">
+      {{firstName.u}} {{lastName.u}}<br />
+      {{#each address}}
+          {{#if street.u}}{{street.u}}<br />{{/if}}
+          {{#if street2.u}}{{street2.u}}<br />{{/if}}
+          {{country.u}}-{{postalCode.u}} {{city.u}}
+      {{/each}}
+  </div>
+</script>
+
+
 <script id="inventor" type="text/x-handlebars-template">
-  <div style="height: 200px; width: 200px; float: left; overflow: hidden;">
+  <div style="height: 235px; width: 235px; float: left; overflow: hidden;">
       Inventors
       <ul>
       {{#each inventor}}
@@ -36,22 +54,22 @@ URI in comment refers to the class of the object in rdf:range
 </script>
 
 <script id="license" type="text/x-handlebars-template">
-  <div style="height: 200px; width: 200px; float: left; overflow: scroll;">
+  <div style="height: 235px; width: 235px; float: left; overflow: scroll;">
     <p><small>&copy; {{license.u}}</small></p>
   </div>
 </script>
 
 <script id="title_text" type="text/x-handlebars-template">
-  <div style="height: 200px; width: 400px; float: left; overflow: scroll;">
+  <div style="height: 235px; width: 470px; float: left; overflow: scroll;">
     <h1>{{title}}</h1>
     <p>{{text}}</p>
   </div>
 </script>
 
 <script id="community" type="text/x-handlebars-template">
-  <div style="height: 200px; width: 400px; background-color: lightgrey; padding: 4px; float: left; overflow: scroll;">
-  <div style="width: 200px; height: 200px; overflow: hidden; margin: -4px;" class="pull-right">
-    <img style="min-width: 200px; min-height: 200px; max-width: 300px; max-height: 300px" src="{{img_url.u}}" />
+  <div style="height: 235px; width: 470px; background-color: lightgrey; padding: 4px; float: left; overflow: scroll;">
+  <div style="width: 235px; height: 235px; overflow: hidden; margin: -4px;" class="pull-right">
+    <img style="min-width: 235px; min-height: 235px; max-width: 300px; max-height: 300px" src="{{img_url.u}}" />
   </div>
     <h1>{{title.u}}</h1>
     <p>{{text.u}}</p>
@@ -59,17 +77,39 @@ URI in comment refers to the class of the object in rdf:range
 </script>
 
 <script id="label_comment" type="text/x-handlebars-template">
-    <div style="height: 200px; width: 400px; float: left; overflow: scroll; padding: 4px;">
+    <div style="height: 235px; width: 470px; float: left; overflow: scroll; padding: 4px;">
     <h1>{{title.u}}</h1>
     <p>{{text.u}}</p>
   </div>
 </script>
 
 <script id="location" type="text/x-handlebars-template">
-    <div id="map-canvas" style="height: 200px; width: 200px; float: left;">
+    <div id="map-canvas" style="height: 235px; width: 235px; float: left;">
         <big>&#8982;</big> {{lat.u}} / {{long.u}}
     </div> 
 </script>
+
+<script id="creator" type="text/x-handlebars-template">
+    <div style="height: 235px; width: 235px; float: left;">
+        {{#each creator}}
+            This resource was created by {{this.title.u}}.
+        {{/each}}
+    </div> 
+</script>
+
+<script id="created" type="text/x-handlebars-template">
+    <div style="height: 235px; width: 235px; float: left;">
+        This resource was created on {{created.u}}.
+    </div> 
+</script>
+
+<script id="createMeta" type="text/x-handlebars-template">
+    <div style="height: 235px; width: 235px; float: left;">
+        This resource was created by {{#each creator}}{{this.title.u}}{{/each}} on {{created.u}}
+        
+    </div> 
+</script>
+
 
 <script id="location_js" type="text/x-handlebars-template">
         var script = document.createElement("script");
@@ -91,13 +131,13 @@ URI in comment refers to the class of the object in rdf:range
 </script>-->
 
 <script id="img" type="text/x-handlebars-template">
-  <div style="width: 200px; height: 200px; float: left">
-  <img style="min-width: 200px; min-height: 200px;" src="{{img_url.u}}" class="img-responsive" />
+  <div style="width: 235px; height: 235px; float: left">
+    <img style="min-width: 235px; min-height: 235px;" src="{{img_url.u}}" class="img-responsive" />
   </div>
 </script>
 
 <script id="literal" type="text/x-handlebars-template">
-    <div style="width: 200px; height: 200px; float: left"><p title="{{{subject.u}}} - {{{predicate.u}}}"><b>{{{name.u}}}</b>:<br /> {{{text.u}}}</p></div>
+  <div style="width: 235px; height: 235px; float: left"><p title="{{{subject.u}}} - {{{predicate.u}}}"><b>{{{name.u}}}</b>:<br /> {{{text.u}}}</p></div>
 </script>
 
 <!-- void -->
@@ -106,4 +146,7 @@ URI in comment refers to the class of the object in rdf:range
 
 <!-- unknown -->
 <script id="unknown" type="text/x-handlebars-template">
-    <div style="width: 200px; height: 200px; float: left; overflow: hidden;"><small><p>{{{subject.u}}} <br />&#9608;<br /> {{{predicate.u}}} <br />&#9608;<br /> {{{object.u}}}</p></small></div>
+  <div style="width: 235px; height: 235px; float: left">
+      <small><p>{{{subject.u}}}<br />&#9608;<br />{{{predicate.u}}}<br />&#9608;<br />{{{object.u}}}</p></small>
+  </div>
+</script>
