--- a/visualizer_browser.html
+++ b/visualizer_browser.html
@@ -3,11 +3,9 @@
 -->
 
 <script id="title" type="text/x-handlebars-template">
-  <h1>{{title.u}}</h1>
-</script>
-
-<script id="title_de" type="text/x-handlebars-template">
-  <h1>{{title.l.de}}</h1>
+  <div style="height: 235px; width: 100%; float: left; overflow: scroll;">
+  <h1>{{title.title.u}}</h1>
+  </div>
 </script>
 
 <script id="text" type="text/x-handlebars-template">
@@ -18,7 +16,7 @@
 
 <script id="person_name" type="text/x-handlebars-template">
   <div style="height: 235px; width: 235px; float: left; overflow: hidden;">
-      {{lastName.u}} {{firstName.u}}
+      {{person_name.lastName.u}} {{person_name.firstName.u}}
   </div>
 </script>
 
@@ -32,11 +30,11 @@
 
 <script id="address" type="text/x-handlebars-template">
   <div style="height: 235px; width: 235px; float: left; overflow: hidden;">
-      {{firstName.u}} {{lastName.u}}<br />
-      {{#each address}}
-          {{#if street.u}}{{street.u}}<br />{{/if}}
-          {{#if street2.u}}{{street2.u}}<br />{{/if}}
-          {{country.u}}-{{postalCode.u}} {{city.u}}
+      {{addressBlock.person_name.firstName.u}} {{addressBlock.person_name.lastName.u}}<br />
+      {{#each addressBlock.addressLink}}
+          {{#if addressPartCombine.address_line2.street.u}}{{addressPartCombine.address_line2.street.u}}<br />{{/if}}
+          {{#if addressPartCombine.address_line2.street2.u}}{{addressPartCombine.address_line2.street2.u}}<br />{{/if}}
+          {{addressPartCombine.address_line3.country.u}}-{{addressPartCombine.address_line3.postalCode.u}} {{addressPartCombine.address_line3.city.u}}
       {{/each}}
   </div>
 </script>
@@ -69,15 +67,15 @@
 <script id="community" type="text/x-handlebars-template">
   <div style="height: 235px; width: 470px; background-color: lightgrey; padding: 4px; float: left; overflow: scroll;">
   <div style="width: 235px; height: 235px; overflow: hidden; margin: -4px;" class="pull-right">
-    <img style="min-width: 235px; min-height: 235px; max-width: 300px; max-height: 300px" src="{{img_url.u}}" />
+    <img style="min-width: 235px; min-height: 235px; max-width: 300px; max-height: 300px" src="{{community.img_url.u}}" />
   </div>
-    <h1>{{title.u}}</h1>
-    <p>{{text.u}}</p>
+    <h1>{{community.label_comment.title.u}}</h1>
+    <p>{{community.label_comment.text.u}}</p>
   </div>
 </script>
 
 <script id="label_comment" type="text/x-handlebars-template">
-    <div style="height: 235px; width: 470px; float: left; overflow: scroll; padding: 4px;">
+  <div style="height: 235px; width: 470px; float: left; overflow: scroll; padding: 4px;">
     <h1>{{title.u}}</h1>
     <p>{{text.u}}</p>
   </div>
@@ -85,7 +83,7 @@
 
 <script id="location" type="text/x-handlebars-template">
     <div id="map-canvas" style="height: 235px; width: 235px; float: left;">
-        <big>&#8982;</big> {{lat.u}} / {{long.u}}
+        <big>&#8982;</big> {{location.lat.u}} / {{location.long.u}}
     </div> 
 </script>
 
@@ -118,7 +116,7 @@
         document.body.appendChild(script);
         
         initializeMap = function () {
-            var myLatlng = new google.maps.LatLng({{lat.u}}, {{long.u}});
+            var myLatlng = new google.maps.LatLng({{location.lat.u}}, {{location.long.u}});
             var mapOptions = { center: myLatlng, disableDefaultUI: true, zoomControl: true, zoom: 12, mapTypeId: google.maps.MapTypeId.ROADMAP };
             var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
         };
@@ -132,12 +130,14 @@
 
 <script id="img" type="text/x-handlebars-template">
   <div style="width: 235px; height: 235px; float: left">
-    <img style="min-width: 235px; min-height: 235px;" src="{{img_url.u}}" class="img-responsive" />
+  <img style="min-width: 235px; min-height: 235px;" src="{{img_url.u}}" class="img-responsive" />
   </div>
 </script>
 
 <script id="literal" type="text/x-handlebars-template">
-  <div style="width: 235px; height: 235px; float: left"><p title="{{{subject.u}}} - {{{predicate.u}}}"><b>{{{name.u}}}</b>:<br /> {{{text.u}}}</p></div>
+    {{#with literal}}
+    <div style="width: 235px; height: 235px; float: left"><p title="{{{subject.u}}} - {{{predicate.u}}}"><b>{{{name.u}}}</b>:<br /> {{{text.u}}}</p></div>
+    {{/with}}
 </script>
 
 <!-- void -->
@@ -146,7 +146,9 @@
 
 <!-- unknown -->
 <script id="unknown" type="text/x-handlebars-template">
-  <div style="width: 235px; height: 235px; float: left">
+  <div style="width: 235px; height: 235px; float: left; overflow: scroll">
+      {{#with unknown}}
       <small><p>{{{subject.u}}}<br />&#9608;<br />{{{predicate.u}}}<br />&#9608;<br />{{{object.u}}}</p></small>
+      {{/with}}
   </div>
 </script>
