--- a/index.html
+++ b/index.html
@@ -4,109 +4,41 @@
     <link href="lib/bootstrap.min.css" rel="stylesheet">
     <script src="lib/underscore-1.6.0.js" type="text/javascript"></script>
     <script src="lib/jquery-1.10.2.min.js" type="text/javascript"></script>
-    <script src="lib/handlebars-v1.3.0.js" type="text/javascript"></script>
-	<script src="lib/rdf.js"></script>
-	<script src="lib/n3-browser.js"></script>
-	<script src="lib/jsonld.js"></script>
-	<script src="lib/rdf-ext.js"></script>
+    <script src="lib/rdf.js"></script>
+    <script src="lib/n3-browser.js"></script>
+    <script src="lib/jsonld.js"></script>
+    <script src="lib/rdf-ext.js"></script>
     <script src="matcher.js" type="text/javascript"></script>
     <script src="src/uduvudu.js" type="text/javascript"></script>
 </head>
 <body>
     <div class="container">
-        <div id="chooser">
-            <form class="form-inline" role="form">
-                <select id="selectSource" class="form-control">
-                    <option>Select an application</option>
-<option value="https://localhost:8443/ossaward/0">MegaGEOGame</option>
-<option value="https://localhost:8443/ossaward/1">Kern Sibbald for Bacula</option>
-<option value="https://localhost:8443/ossaward/2">OSS bei der Stadt Biel</option>
-<option value="https://localhost:8443/ossaward/3">Tryton</option>
-<option value="https://localhost:8443/ossaward/4">VeriSO</option>
-<option value="https://localhost:8443/ossaward/5">OpenELEC Mediacenter</option>
-<option value="https://localhost:8443/ossaward/6">why open computing SA</option>
-<option value="https://localhost:8443/ossaward/7">Silicoin</option>
-<option value="https://localhost:8443/ossaward/8">hitobito</option>
-<option value="https://localhost:8443/ossaward/9">Laax+</option>
-<option value="https://localhost:8443/ossaward/10">University of St.Gallen’s career and alumni portals</option>
-<option value="https://localhost:8443/ossaward/11">YaIniT</option>
-<option value="https://localhost:8443/ossaward/12">Symfony CMF</option>
-<option value="https://localhost:8443/ossaward/13">camunda BPM</option>
-<option value="https://localhost:8443/ossaward/14">jOOQ</option>
-<option value="https://localhost:8443/ossaward/15">Projekt Ansible</option>
-<option value="https://localhost:8443/ossaward/16">LINSAN</option>
-<option value="https://localhost:8443/ossaward/17">map.geo.admin.ch V3</option>
-<option value="https://localhost:8443/ossaward/18">openATTIC</option>
-<option value="https://localhost:8443/ossaward/19">CityMobile</option>
-<option value="https://localhost:8443/ossaward/20">cdist configuration management</option>
-<option value="https://localhost:8443/ossaward/21">selendroid</option>
-<option value="https://localhost:8443/ossaward/22">Piwik</option>
-
-                </select>
-            </form>
-        </div>
+        <!-- location where to render to -->
         <div id="main">
         </div>
     </div>
+    <!-- where the templates are injected -->
     <div id="visualizer">
     </div>
     <script type="text/javascript">
         // prepare visualizer templates for uduvudu
         $("#visualizer").load("visualizer.html");
 
-        // helper to decipher the get query
-        function getParameterByName(name) {
-            name = name.replace(/[\[]/, "\\\[").replace(/[\]]/, "\\\]");
-            var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
-                results = regex.exec(location.search);
-            return results == null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
-        }
+        // instantiate rdf-ext object
+        var store = new rdf.LdpStore();
+        var source = 'http://dbpedia.org/resource/University_of_Fribourg';
 
-        function loadFromSource(source, resource) {
-	        var store = new rdf.LdpStore();
+        // something about what is goingn on
+        $("#main").html('<div class="alert alert-info"><button type="button" class="close" data-dismiss="alert">&times;</button> <strong>Loading</strong> '+source+' is being loaded ...</div>');
 
-            $("#main").html('<div class="alert alert-info"><button type="button" class="close" data-dismiss="alert">&times;</button> <strong>Loading</strong> '+source+' is being loaded ...</div>');
-            if (source.substring(0,4) === "http") {
-	            store.graph(source, function (graph, error) {
-                    if (error == null) {
-                        console.debug("successfully loaded "+graph.toArray().length+" triples");
-                        $("#main").html(uduvudu.process(graph, resource));
-                    };
-                })
-            } else {
-                $.get(source, function(response) {
-                    store.load('text/turtle',response, function(success, amountTriples){
-                        if(success) {
-                            console.debug("successfully loaded "+amountTriples+" triples");
-                            var startTime = new Date();
-                            $("#main").html(uduvudu.process(store, resource));
-                            console.log("rendered in " + ((new Date()) - startTime) + "ms");
-                        };
-                    })
-                });
-            };
-        };
-
-        // if uri is specified in title get it
-        var uri = getParameterByName('uri');
-        if (uri != '') {
-            loadFromSource(uri, uri);
-            }
-
-        $('#setSource').on('keyup', function() {
-            loadFromSource(this.value, $('#setResource').val());
-        });
-
-        $('#setResource').on('keyup', function() {
-            loadFromSource($('#setSource').val(), this.value);
-        });
-
-        $('#selectSource').on('change', function(event) {
-            loadFromSource(this.value, event.target.selectedOptions[0].attributes['value'].nodeValue);
-            //loadFromSource(this.value);
-        });
-
-
+        // load triples
+        store.graph(source, function (graph, error) {
+                if (error == null) {
+                    console.debug("successfully loaded "+graph.toArray().length+" triples");
+                    // resource (entry for template search) is same as source in this example
+                    $("#main").html(uduvudu.process(graph, source));
+                };
+            })
     </script>
 </body>
 </html>
