complexer visualizer.html

--- a/visualizer.html
+++ b/visualizer.html
@@ -24,6 +24,7 @@
 <script id="name" type="text/uduvudu-template">
   <div style="height: 235px; width: 235px; float: left; overflow: scroll;">
       <p><%-name.u%></p>
+      <p><small><% print(_.toArray(name.l).join(', ')) %></small></p>
   </div>
 </script>
 
