removed jquery depencency, refactoring

--- a/visualizer.html
+++ b/visualizer.html
@@ -41,16 +41,13 @@
   <div style="width: 235px; height: 235px; overflow: hidden; margin: -4px;" class="pull-right">
       <img style="min-width: 235px; min-height: 235px; max-width: 300px; max-height: 300px" src="<%-community.img_url.u%>" />
   </div>
-    <h1><%-community.label_comment.title.u%></h1>
-    <p><%-community.label_comment.text.u%></p>
+    <%-community.label_comment.r%>
   </div>
 </script>
 
 <script id="label_comment" type="text/uduvudu-template">
-  <div style="height: 235px; width: 470px; float: left; overflow: scroll; padding: 4px;">
-    <h1><%-title.u%></h1>
-    <p><%-text.u%></p>
-  </div>
+  <h1><%-title.u%></h1>
+  <p><%-text.u%></p>
 </script>
 
 <script id="location" type="text/uduvudu-template">
