--- a/visualizer.html
+++ b/visualizer.html
@@ -41,7 +41,7 @@
   <div style="width: 235px; height: 235px; overflow: hidden; margin: -4px;" class="pull-right">
       <img style="min-width: 235px; min-height: 235px; max-width: 300px; max-height: 300px" src="<%-community.img_url.u%>" />
   </div>
-    <%-community.label_comment.r%>
+    <%=template(community.label_comment)%>
   </div>
 </script>
 
