recursive templates work

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         // instantiate rdf-ext object
         var store = new rdf.LdpStore();
-        var source = 'http://dbpedia.org/resource/University_of_Fribourg';
+        var source = 'http://dbpedia.org/resource/Fribourg';
 
         // something about what is goingn on
         $("#main").html('<div class="alert alert-info"><button type="button" class="close" data-dismiss="alert">&times;</button> <strong>Loading</strong> '+source+' is being loaded ...</div>');
