--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <link href="lib/bootstrap.min.css" rel="stylesheet">
-    <script src="lib/underscore.js" type="text/javascript"></script>
+    <script src="lib/underscore-min.js" type="text/javascript"></script>
     <script src="lib/jquery-1.10.2.min.js" type="text/javascript"></script>
     <script src="lib/rdf.js"></script>
     <script src="lib/n3-browser.js"></script>
