--- a/index.html
+++ b/index.html
@@ -10,13 +10,151 @@
     <script src="lib/rdf-ext.js"></script>
     <script src="matcher.js" type="text/javascript"></script>
     <script src="src/uduvudu.js" type="text/javascript"></script>
+    <script src="src/uduvudu-edit.js" type="text/javascript"></script>
+    <style>
+      .shim {
+        position: relative;
+        margin: 0 auto;
+        float: left;
+      }
+
+      .shim .tools {
+        position: absolute;
+        z-index: 10;
+        width: 60px;
+        height: 20px;
+        position: absolute;
+        top: 2px;
+        right: 2px;
+        background-color: rgba(0, 0, 0, 0.2);
+      }
+
+      .add {
+        text-align: center;
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        right: 0;
+        cursor: pointer;
+      }
+
+      .edit {
+        text-align: center;
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        right: 20px;
+        cursor: pointer;
+      }
+
+      .info {
+        text-align: center;
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        right: 40px;
+      }
+
+      #editor {
+        background-color: rgba(255, 255, 255, 0.9);
+        padding: 10px;
+        z-index: 100;
+        position: fixed;
+        width: 30%;
+        height: 100%;
+        right: 10px;
+      }
+
+      #edit_area {
+        padding: 10px;
+        overflow-y: scroll;
+        height: 100%;
+      }
+
+    </style>
 </head>
 <body>
     <div class="container">
         <!-- location where to render to -->
-        <div id="main">
+      <div class="row">
+        <div id="main" class="col-md-12">
         </div>
+        <div id="editor">
+            <h2>edit</h2>
+            <div id="edit_area"></div>
+        </div>
+      </div>
     </div>
+
+    <!-- editor templates -->
+         <script id="tmpPredicate" type="text/uduvudu_edit-template">
+            <div id="vars">
+                <p>Creates a basic predicate matcher.</p>
+                  <h3>matcher</h3>
+                  <div class="form-group">
+                    <label for="frm_predicate">Predicate:</label>
+                    <input class="form-control" id="frm_predicate" value="<%-def.predicate%>" disabled>
+                  </div>
+                  <div class="form-group">
+                     <label for="frm_matcherName">Matcher Name:</label>
+                     <input class="form-control" id="frm_matcherName" value="<%-def.matcherName%>">
+                  </div>
+                  <div class="form-group">
+                     <label for="frm_templateVariable">Template Variable:</label>
+                     <input class="form-control" id="frm_templateVariable" value="<%-def.templateVariable%>">
+                  </div>
+                  <div class="form-group">
+                     <label for="frm_order">Order :</label>
+                     <input type="number" class="form-control" id="frm_order" value="<%-def.order%>">
+                  </div>
+            </div>
+            <div id="template">
+                  <h3>template</h3>
+                  <div class="form-group">
+                     <label for="frm_templateId">Template ID :</label>
+                     <input class="form-control" id="frm_templateId" value="<%-def.templateId%>">
+                  </div>
+                  <div class="form-group">
+                      <textarea rows="5" class="form-control" id="frm_template">&lt;div class="t"&gt;
+    &lt;%-<%-def.templateVariable%>.u%&gt;
+&lt;/div&gt;</textarea>
+                  </div>
+            </div>
+            <button onClick="uduvudu_edit.add_predicate()" class="btn btn-default">Add Matcher & Template</button>
+            <br><br><br><br><br><br>
+         </script>
+
+         <script id="tmpCombine" type="text/uduvudu_edit-template">
+            <div id="vars">
+                <p>Combine multiple matchers to a new matcher.</p>
+                  <h3>matcher</h3>
+                  <div class="form-group">
+                     <label for="frm_matcherName">Matcher Name:</label>
+                     <input class="form-control" id="frm_matcherName">
+                  </div>
+                  <div class="form-group">
+                     <label for="frm_templateVariable">Template Variable:</label>
+                     <input class="form-control" id="frm_templateVariable" value="<%-def.templateVariable%>">
+                  </div>
+                  <div>
+                      <% _.each(def.combines, function (c) { print( def.templateVariable + '.' +c.name + ' \n')}); %>
+                  </div>
+            </div>
+            <div id="template">
+                  <h3>template</h3>
+                  <div class="form-group">
+                     <label for="frm_templateId">Template ID :</label>
+                     <input class="form-control" id="frm_templateId" value="<%-def.templateId%>">
+                  </div>
+                  <div class="form-group">
+                      <textarea rows="5" class="form-control" id="frm_template">&lt;div class="t"&gt;
+<% _.each(def.combines, function (c) { print('    &lt;%=template(' +def.templateVariable+'.'+ c.name + ')%&gt;\n')}); %>&lt;/div&gt;</textarea>
+                  </div>
+            </div>
+            <button onClick="uduvudu_edit.add_combine()" class="btn btn-default">Add Matcher & Template</button>
+            <br><br><br><br><br><br>
+         </script>
+
     <!-- where the templates are injected -->
     <div id="visualizer">
     </div>
@@ -36,7 +174,7 @@
                 if (error == null) {
                     console.debug("successfully loaded "+graph.toArray().length+" triples");
                     // resource (entry for template search) is same as source in this example
-                    $("#main").html(uduvudu.process(graph, source));
+                    uduvudu.process(graph, source, null, null, function (out) {$("#main").html(out);});
                 };
             })
     </script>
