--- a/edit.html
+++ b/edit.html
@@ -8,31 +8,48 @@
     <script src="lib/n3-browser.js"></script>
     <script src="lib/jsonld.js"></script>
     <script src="lib/rdf-ext.js"></script>
-    <script src="matcher.js" type="text/javascript"></script>
+    <!--    <script src="matcher.js" type="text/javascript"></script>-->
     <script src="src/uduvudu.js" type="text/javascript"></script>
+    <script src="src/uduvudu-edit.js" type="text/javascript"></script>
 </head>
 <body>
     <div class="container">
-        <!-- location where to render to -->
       <div class="row">
-        <div id="main">
-        </div>
+        <div id="content">
+            <div id="main">
+                <!-- location where to render to -->
+            </div>
+            <div id="editor">
+               <h2>edit</h2>
+               <div id="edit_area"></div>
+            </div>
       </div>
     </div>
 
     <!-- where the templates are injected -->
     <div id="visualizer">
+        <script id="literal" type="text/uduvudu-template">
+            <div class="uv">
+                <p title="<%-literal.subject.u%> - <%-literal.predicate.u%>"><b><%-literal.name.u%></b>:<br /> <%-literal.text.u%></p>
+            </div>
+        </script>
+
+        <!-- unknown -->
+        <script id="unknown" type="text/uduvudu-template">
+          <div class="uv">
+              <small><p><%=unknown.subject.u%><br />&#9608;<br /><%=unknown.predicate.u%><br />&#9608;<br /><%=unknown.object.u%></p></small>
+          </div>
+        </script>
     </div>
 
     <script type="text/javascript">
-        // prepare visualizer templates for uduvudu
-        $("#visualizer").load("visualizer.html");
 
-        // instantiate rdf-ext object
+        // instantiate rdf-ext store
         var store = new rdf.LdpStore();
         var source = 'http://dbpedia.org/resource/Fribourg';
+//        var source = 'http://data.ge.alod.ch/id/archivalresource/adl-l-1482';
 
-        // something about what is goingn on
+        // something about what is going on
         document.getElementById('main').innerHTML =  ''
         + '<div class="alert alert-info">'
         + '  <button type="button" class="close" data-dismiss="alert">&times;</button>'
